2010-05-04 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 0.7.0

2009-10-11 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Dependency added (gnutls) in v0.6.0-2 

2008-03-20 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 0.6.0

2008-09-25 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 0.5.1

2008-09-09 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Package moved to [community]
	* Update to major release 0.5.0