@@ -3,7 +3,7 @@
 
 pkgname=nzbget
 pkgver=0.7.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Downloads from Usenet using .nzb files"
 arch=('i686' 'x86_64')
 url="http://nzbget.sourceforge.net/"
@@ -25,5 +25,6 @@ build() {
 #other files
   install -d ${pkgdir}/usr/share/$pkgname || return 1
   install -m644 -t ${pkgdir}/usr/share/$pkgname \
-    AUTHORS postprocess-example.sh ChangeLog nzbget.conf.example README || return 1
+    AUTHORS postprocess-example.sh postprocess-example.conf \
+    ChangeLog nzbget.conf.example README || return 1
 }
